# Truely

./: .env  .env.example  Dockerfile  README.md  SOLUTION.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init_grants_svc.py
app/: dependencies.py  main.py
app/api/routes/: grants.py
app/core/: config.py  database.py
app/db/: seed.py
app/db/models/: __init__.py  document.py  grant.py  user.py
app/repositories/: grants.py
app/schemas/: grant.py
app/services/: grants.py
grants_svc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  factories.py
tests/integration/: test_grants_api.py
tests/unit/: test_grant_service.py
